--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -79,7 +79,7 @@
     \input{chapters/introduction}
 
     % Słownik pojęć i skrótów
-    \printglossary[type=\acronymtype]
+%    \printglossary[type=\acronymtype]
     \printglossary[title={Słownik pojęć i skrótów},toctitle={Słownik pojęć i skrótów}]
 
     \input{chapters/problem-description}
@@ -90,6 +90,7 @@
     \input{chapters/implementation}
     \input{chapters/testing}
     \input{chapters/system-presentation}
+    \input{chapters/amount-of-work/amount-of-work}
     \input{chapters/summary}
 
     \printbibliography[title={Bibliografia}, heading=bibintoc]
