--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1,63 +1,74 @@
 %! Author = Mateusz Redosz
 %! Date = 20/09/2025
 
-%todo dodać pojęcia
 \newglossaryentry{backend}
 {
     name={Backend},
-    description={}
+    description={Część aplikacji odpowiedzialna za logikę biznesową, przetwarzanie danych i komunikację z bazą danych. Działa po stronie serwera i obsługuje żądania wysyłane przez frontend.}
 }
 
 \newglossaryentry{frontend}
 {
     name={Frontend},
-    description={}
+    description={Warstwa aplikacji odpowiedzialna za interfejs użytkownika oraz interakcję z użytkownikiem. Zazwyczaj tworzona przy użyciu technologii takich jak HTML, CSS i JavaScript.}
 }
 
 \newglossaryentry{baza-danych}
 {
     name={Baza danych},
-    description={}
+    description={Zbiór uporządkowanych danych przechowywanych w sposób umożliwiający ich łatwe wyszukiwanie, modyfikowanie i analizowanie. W aplikacjach najczęściej wykorzystywane są relacyjne lub nierelacyjne bazy danych.}
 }
 
 \newglossaryentry{framework}
 {
     name={Framework},
-    description={}
+    description={Zestaw narzędzi, bibliotek i struktur wspomagających tworzenie aplikacji. Ułatwia programowanie poprzez dostarczenie gotowych komponentów oraz określenie zasad organizacji kodu.}
 }
 
 \newglossaryentry{review-kodu}
 {
     name={Review kodu},
-    description={}
+    description={Proces polegający na wzajemnym przeglądzie kodu źródłowego przez programistów w celu wykrycia błędów, poprawy jakości oraz zwiększenia spójności projektu.}
 }
 
 \newglossaryentry{jwt}
 {
     name={JWT},
-    description={}
+    description={Skrót od \textit{JSON Web Token}. Standard służący do bezpiecznego przekazywania informacji między stronami w formacie JSON, często używany w procesach autoryzacji użytkowników.}
 }
 
 \newglossaryentry{cicd}
 {
     name={CI/CD},
-    description={}
+    description={Skrót od \textit{Continuous Integration/Continuous Deployment}. Praktyka programistyczna polegająca na automatyzacji procesu budowania, testowania i wdrażania oprogramowania.}
 }
 
 \newglossaryentry{commit}
 {
     name={Commit},
-    description={}
+    description={Zapis zmian w repozytorium systemu kontroli wersji, który dokumentuje stan projektu w określonym momencie.}
 }
 
 \newglossaryentry{push}
 {
     name={Push},
-    description={}
+    description={Operacja w systemie kontroli wersji polegająca na wysłaniu lokalnych zmian (commitów) do zdalnego repozytorium.}
 }
 
 \newglossaryentry{spot}
 {
     name={Spot},
-    description={}
+    description={Spotkanie zespołu projektowego, zazwyczaj krótkie i regularne, służące omówieniu postępów prac, problemów oraz planów na najbliższy okres.}
+}
+
+\newglossaryentry{sidebar}
+{
+    name={Sidebar},
+    description={Boczny panel w interfejsie użytkownika, zawierający menu nawigacyjne lub dodatkowe opcje funkcjonalne aplikacji.}
+}
+
+\newglossaryentry{design}
+{
+    name={Design},
+    description={Etap lub proces projektowania wyglądu i funkcjonalności aplikacji, obejmujący zarówno aspekty wizualne, jak i użytkowe (UX/UI).}
 }
