--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -1,10 +1,14 @@
 \documentclass{sprz}
 
+\usepackage[hidelinks]{hyperref}
 \usepackage{glossaries}
+\usepackage[polish]{babel}
 
+
+\makeglossaries
 \addbibresource{bibliography.bib}
 
-\input{slownik-pojec}
+\input{glossary}
 
 \studfield{Informatyka}
 \studtype{Stacjonarne}
@@ -75,8 +79,8 @@
     \input{chapters/introduction}
 
     % Słownik pojęć i skrótów
-    \printglossary[type=\acronymtype]
-    \printglossary
+%    \printglossary[type=\acronymtype]
+    \printglossary[title={Słownik pojęć i skrótów},toctitle={Słownik pojęć i skrótów}]
 
     \input{chapters/problem-description}
     \input{chapters/project-context}
@@ -86,6 +90,7 @@
     \input{chapters/implementation}
     \input{chapters/testing}
     \input{chapters/system-presentation}
+    \input{chapters/amount-of-work/amount-of-work}
     \input{chapters/summary}
 
     \printbibliography[title={Bibliografia}, heading=bibintoc]
