--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -109,11 +109,6 @@
     \clearpage
 
     \input{chapters/wstep/wstep}
-
-    % Słownik pojęć i skrótów
-%    \printglossary[type=\acronymtype]
-    \printglossary[title={Słownik pojęć i skrótów},toctitle={Słownik pojęć i skrótów}]
-
     \input{chapters/opis-problemu/opis-problemu}
     \input{chapters/planowanie/planowanie}
     \input{chapters/analiza-wymagan/analiza-wymagan}
@@ -124,8 +119,9 @@
     \input{chapters/prezentacja-systemu/prezentacja-systemu}
     \input{chapters/naklad-pracy/naklad-pracy}
     \input{chapters/podsumowanie/podsumowanie}
+    \input{chapters/slownik-pojec/slownik-pojec}
+    \input{chapters/bibliografia/bibliografia}
+    \input{chapters/zalaczniki/zalaczniki}
 
-    \printbibliography[title={Bibliografia}, heading=bibintoc]
-    \makethesisattachments
 
 \end{document}
