--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -25,3 +25,19 @@ journal = {XXY},
 year = {2021},
 author = {Mohammad {Beheshti Roui} and Mariam Zomorodi and Masoomeh Sarvelayati and Moloud Abdar and Hamid Noori and Paweł Pławiak and Ryszard Tadeusiewicz and Xujuan Zhou and Abbas Khosravi and Saeid Nahavandi and U. Rajendra Acharya}
 }
+
+@online{DAD,
+  title   = {Disciplined Agile Delivery},
+  url     = {https://www.pmi.org/disciplined-agile/process/introduction-to-dad/why},
+  urldate = {2025-10-30},
+  date    = {2025-01-01},
+  organization = {PMI}
+}
+
+@online{DAD-LLF,
+  title   = {Disciplined Agile Delivery — Lean Life Cycle},
+  url     = {https://www.pmi.org/disciplined-agile/lifecycle/lean-lifecycle},
+  urldate = {2025-10-30},
+  date    = {2025-01-01},
+  organization = {PMI}
+}
