--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -38,7 +38,7 @@
 
 
 \makeglossaries
-\addbibresource{bibliography.bib}
+
 
 \input{glossary}
 
@@ -119,9 +119,25 @@
     \input{chapters/prezentacja-systemu/prezentacja-systemu}
     \input{chapters/naklad-pracy/naklad-pracy}
     \input{chapters/podsumowanie/podsumowanie}
-    \input{chapters/slownik-pojec/slownik-pojec}
-    \input{chapters/bibliografia/bibliografia}
-    \input{chapters/zalaczniki/zalaczniki}
+
+    \chapter{Słownik pojęć i skrótów}
+    \label{ch:sownik-pojec-i-skrotow}
+    \printglossary[type=\acronymtype]
+%    \printglossary[title={Słownik pojęć i skrótów}, toctitle={Słownik pojęć i skrótów}]
+%TODO:nie wiem czmu słownik pojec sie rozjezdza
+
+    \usepackage[backend=biber,style=numeric,sorting=nyt]{biblatex}
+    \addbibresource{bibliography.bib}
+    \usepackage{csquotes}
+    \chapter{Bibliografia}
+    \label{ch:bibliografia}
+    \printbibliography[heading=bibintoc, title={Bibliografia}]
+
+    \chapter{Załączniki}
+    \label{ch:zaaczniki}
+%\appendix
+    \makethesisattachments
+
 
 
 \end{document}
