--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -1,4 +1,4 @@
- 
+% tu sie dodaje wpisy z ktorych potem mozna korzystac w tekscie (na razie nie wiemc zemu nie dziala)
 
 @misc{wikipedia:loremipsum,
   title = {Lorem Ipsum},
