--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -1,6 +1,8 @@
 %! Author = Mateusz Redosz
 %! Date = 20/09/2025
 
+
+
 \newglossaryentry{backend}
 {
     name={Backend},
@@ -71,4 +73,12 @@
 {
     name={Design},
     description={Etap lub proces projektowania wyglądu i funkcjonalności aplikacji, obejmujący zarówno aspekty wizualne, jak i użytkowe (UX/UI).}
+}
+
+\newglossaryentry{DAD_LLC}{
+    name={Disciplined Agile Delivery - Lean Life Cycle},
+    description={Kanbanowy tryb pracy bez sprintów: zespół pobiera małe zadania z tablicy, pilnuje limitów pracy w toku i często wdraża małe zmiany.
+    Planowanie jest lekkie i na bieżąco; priorytet mają rzeczy o najwyższej wartości.
+    Skupiamy się na płynności—skraca się czas przejścia zadań, usuwa blokady, usprawnia proces małymi krokami.
+    Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”.}
 }
