--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -4,7 +4,7 @@
 \usepackage{glossaries}
 \usepackage[polish]{babel}
 \usepackage{import}
-
+\usepackage{csquotes}
 %JSON Coloring
 \lstdefinelanguage{json}{
     basicstyle=\footnotesize\ttfamily,
@@ -33,11 +33,6 @@
     morestring=[b]",
     stringstyle=\color{green!40!black}
 }
-
-
-
-
-\makeglossaries
 
 
 \input{glossary}
@@ -97,7 +92,8 @@
 \keyword{--- brak ---}%todo nie wiem czy bedzie potrzebne ale zostawiam żeby było
 
 
-
+\addbibresource{bibliography.bib}
+\makeglossaries
 
 \begin{document}
 
@@ -120,7 +116,14 @@
     \input{chapters/naklad-pracy/naklad-pracy}
     \input{chapters/podsumowanie/podsumowanie}
     \input{chapters/slownik-pojec/slownik-pojec}
-    \input{chapters/bibliografia/bibliografia}
+
+
+%    \input{chapters/bibliografia/bibliografia}
+    \chapter{Bibliografia}
+    \label{ch:bibliografia}
+    \printbibliography[title={Bibliografia}, heading=bibintoc]
+
     \input{chapters/zalaczniki/zalaczniki}
+%    \makethesisattachments
 
 \end{document}
