--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -80,5 +80,5 @@
     description={Kanbanowy tryb pracy bez sprintów: zespół pobiera małe zadania z tablicy, pilnuje limitów pracy w toku i często wdraża małe zmiany.
     Planowanie jest lekkie i na bieżąco; priorytet mają rzeczy o najwyższej wartości.
     Skupiamy się na płynności—skraca się czas przejścia zadań, usuwa blokady, usprawnia proces małymi krokami.
-    Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”.}
+    Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”}
 }
