--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -121,8 +121,7 @@
 %    \input{chapters/bibliografia/bibliografia}
     \chapter{Bibliografia}
     \label{ch:bibliografia}
-    \printbibliography[title={Bibliografia}, heading=bibintoc]
-
+    \printbibliography[title={}, heading=bibintoc]
     \input{chapters/zalaczniki/zalaczniki}
 %    \makethesisattachments
 
