--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -115,14 +115,24 @@
     \input{chapters/prezentacja-systemu/prezentacja-systemu}
     \input{chapters/naklad-pracy/naklad-pracy}
     \input{chapters/podsumowanie/podsumowanie}
-    \input{chapters/slownik-pojec/slownik-pojec}
 
+%    \input{chapters/slownik-pojec/slownik-pojec}
+    \chapter{Słownik pojęć i skrótów}
+    \label{ch:sownik-pojec-i-skrotow}
+    \setglossarysection{section} % zamiast domyślnego chapter*
+    \vspace*{-2\baselineskip} % usuwa odstęp
+    \printglossary[type=\acronymtype, title={}, toctitle={}]
+%TODO: odstep do usuanieca w pliku wynikowym
 
 %    \input{chapters/bibliografia/bibliografia}
-    \chapter{Bibliografia}
-    \label{ch:bibliografia}
+%    \chapter{Bibliografia}
+%    \label{ch:bibliografia}
     \printbibliography[title={}, heading=bibintoc]
-    \input{chapters/zalaczniki/zalaczniki}
-%    \makethesisattachments
+%    \input{chapters/zalaczniki/zalaczniki}
+%    TODO: jakz robic aby zalaczeniki byly w spisie tresci
+    \cleardoublepage
+    \phantomsection
+    \addcontentsline{toc}{chapter}{Załączniki}
+    \makethesisattachments
 
 \end{document}
