--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -4,6 +4,7 @@
 \usepackage{glossaries}
 \usepackage[polish]{babel}
 \usepackage{import}
+\usepackage{float}
 
 %JSON Coloring
 \lstdefinelanguage{json}{
