Revise comment in bibliography.bibpoprawki review
Updated comment for clarity and corrected a typo.

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -1,4 +1,4 @@
-% tu sie dodaje wpisy z ktorych potem mozna korzystac w tekscie (na razie nie wiemc zemu nie dziala)
+% tu sie dodaje wpisy z ktorych potem mozna korzystac w tekscie, ja obecnie używam tego DAD w rozdiale z metodologią
 
 @misc{wikipedia:loremipsum,
   title = {Lorem Ipsum},
