--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -72,3 +72,27 @@
     name={Design},
     description={Etap lub proces projektowania wyglądu i funkcjonalności aplikacji, obejmujący zarówno aspekty wizualne, jak i użytkowe (UX/UI).}
 }
+
+\newglossaryentry{folder-by-type}
+{
+    name={Folder by type},
+    description={}
+}
+
+\newglossaryentry{bibliote}
+{
+    name={Bibliote},
+    description={}
+}
+
+\newglossaryentry{protected-route}
+{
+    name={Protected route},
+    description={}
+}
+
+\newglossaryentry{wzorzec}
+{
+    name={Wzorzec},
+    description={}
+}
