--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -76,23 +76,23 @@
 \newglossaryentry{folder-by-type}
 {
     name={Folder by type},
-    description={}
+    description={Sposób organizowania struktury katalogów w projekcie, w którym pliki są grupowane według rodzaju (typu) zasobu, a nie według funkcjonalności. Na przykład wszystkie komponenty trafiają do jednego folderu, wszystkie style do innego itd.}
 }
 
 \newglossaryentry{bibliote}
 {
     name={Bibliote},
-    description={}
+    description={Zewnętrzny lub wewnętrzny zestaw gotowych funkcji, klas, komponentów lub modułów, który można wielokrotnie wykorzystywać w projekcie zamiast pisać wszystko od zera.}
 }
 
 \newglossaryentry{protected-route}
 {
     name={Protected route},
-    description={}
+    description={Trasa w aplikacji, do której dostęp jest ograniczony, zwykle tylko dla zalogowanych użytkowników lub użytkowników z odpowiednimi uprawnieniami. Jeżeli użytkownik nie spełnia warunków, jest przekierowywany.}
 }
 
 \newglossaryentry{wzorzec}
 {
     name={Wzorzec},
-    description={}
+    description={Powtarzalne, sprawdzone rozwiązanie typowego problemu projektowego lub architektonicznego. Wzorzec opisuje \emph{jak} coś organizować lub implementować, żeby było czytelne, skalowalne i łatwe w utrzymaniu.}
 }
