--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -9,12 +9,13 @@
 %nowe pakiety do tabel:
 \usepackage{tabularx}
 \usepackage{booktabs}
-\usepackage{array} % do m{...} i nowych typów kolumn
+\usepackage{array,ltablex}
+\keepXColumns
 
 %customowe rozmiary kolumn (do użytku ogolonego)
 \newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
 \newcolumntype{Y}{>{\hspace{0.6em}}X<{\hspace{0.6em}}}
-\newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}} % lewa, zawijana
+\newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}}
 
 \usepackage{float}% ma pomoc z bugiem ze tabelki/zdjęcia przenoszą sie na koniec rozdziału, używam w tabelce dal aktorów
 
