--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -17,7 +17,7 @@
 \newcolumntype{Y}{>{\hspace{0.6em}}X<{\hspace{0.6em}}}
 \newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}}
 
-\usepackage{float}% ma pomoc z bugiem ze tabelki/zdjęcia przenoszą sie na koniec rozdziału, używam w tabelce dal aktorów
+\usepackage{float}% ma pomoc z bugiem ze tabelki/zdjęcia przenoszą sie na koniec rozdziału
 
 %JSON Coloring
 \lstdefinelanguage{json}{
