--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -96,3 +96,13 @@
     name={Wzorzec},
     description={Powtarzalne, sprawdzone rozwiązanie typowego problemu projektowego lub architektonicznego. Wzorzec opisuje \emph{jak} coś organizować lub implementować, żeby było czytelne, skalowalne i łatwe w utrzymaniu.}
 }
+
+\newglossaryentry{stan}{
+    name={Stan},
+    description={Aktualny zestaw danych przechowywanych przez aplikację lub komponent, na podstawie którego renderowany jest interfejs użytkownika. Stan może być lokalny (utrzymywany w pojedynczym komponencie) albo globalny (wspólny dla wielu komponentów).}
+}
+
+\newglossaryentry{ui}{
+    name={UI},
+    description={Interfejs użytkownika (ang. \textit{User Interface}); warstwa prezentacji odpowiedzialna za sposób wyświetlania danych oraz interakcji użytkownika z aplikacją.}
+}
