--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -41,3 +41,84 @@ author = {Mohammad {Beheshti Roui} and Mariam Zomorodi and Masoomeh Sarvelayati 
   date    = {2025-01-01},
   organization = {PMI}
 }
+
+@online{github-actions-billing,
+  title        = {About billing for GitHub Actions},
+  organization = {GitHub Docs},
+  url          = {https://docs.github.com/en/billing/managing-billing-for-github-actions/about-billing-for-github-actions},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{azure-blob-scalability,
+  title        = {Scalability and performance targets for Blob storage},
+  organization = {Microsoft Learn},
+  url          = {https://learn.microsoft.com/azure/storage/blobs/scalability-targets},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{mailtrap-limits,
+  title        = {What are the limitations in Mailtrap?},
+  organization = {Mailtrap Docs},
+  url          = {https://help.mailtrap.io/article/111-what-are-the-limitations-in-mailtrap/},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{locationiq-pricing,
+  title        = {LocationIQ Pricing},
+  organization = {LocationIQ},
+  url          = {https://locationiq.com/pricing},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{google-maps-pricing,
+  title        = {Google Maps Platform Pricing},
+  organization = {Google Cloud},
+  url          = {https://cloud.google.com/maps-platform/pricing},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{openfreemap-docs,
+  title        = {OpenFreeMap Documentation},
+  organization = {OpenFreeMap},
+  url          = {https://openfreemap.org/docs},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{openfreemap-quickstart,
+  title        = {OpenFreeMap Quick Start},
+  organization = {OpenFreeMap},
+  url          = {https://openfreemap.org/docs/quick-start},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{open-meteo-usage,
+  title        = {Open-Meteo API Usage \& Pricing},
+  organization = {Open-Meteo},
+  url          = {https://open-meteo.com/en/docs/usage-and-pricing},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{tenor-docs,
+  title        = {Tenor API — Documentation},
+  organization = {Tenor},
+  url          = {https://tenor.com/gifapi/documentation},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
+@online{wheretheiss-docs,
+  title        = {Where the ISS at? API},
+  organization = {wheretheiss.at},
+  url          = {https://wheretheiss.at/},
+  urldate      = {2025-11-02},
+  date         = {2024-01-01}
+}
+
