--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -82,3 +82,15 @@
     Skupiamy się na płynności—skraca się czas przejścia zadań, usuwa blokady, usprawnia proces małymi krokami.
     Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”}
 }
+
+%droniarz, dronairz fpv, dronairze foto/wideo, froanirz fotograf, Azure blob storage
+
+%Operator drona – posiadacz floty (jeden lub więcej) dronów
+%
+%Pilot drona – osoba posiadająca uprawnienia do pilotowania drona
+%
+%Droniarz – pilot będący także operatorem drona (zazwyczaj entuzjasta dronów)
+%
+%Pilot FPV – pilot drona latajcy na goglach które dają widok z 1. osoby
+%
+%Pilot foto – pilot drona latający dronem fotograficznym
