--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -83,6 +83,7 @@
     Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”}
 }
 
+%TODO
 %droniarz, dronairz fpv, dronairze foto/wideo, froanirz fotograf, Azure blob storage
 
 %Operator drona – posiadacz floty (jeden lub więcej) dronów
