--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -106,3 +106,18 @@
     name={UI},
     description={Interfejs użytkownika (ang. \textit{User Interface}); warstwa prezentacji odpowiedzialna za sposób wyświetlania danych oraz interakcji użytkownika z aplikacją.}
 }
+
+\newglossaryentry{hook}{
+    name={Hook},
+    description={}
+}
+
+\newglossaryentry{css}{
+    name={CSS},
+    description={}
+}
+
+\newglossaryentry{responsywn}{
+    name={Responsywn},
+    description={}
+}
