--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -25,3 +25,45 @@ journal = {XXY},
 year = {2021},
 author = {Mohammad {Beheshti Roui} and Mariam Zomorodi and Masoomeh Sarvelayati and Moloud Abdar and Hamid Noori and Paweł Pławiak and Ryszard Tadeusiewicz and Xujuan Zhou and Abbas Khosravi and Saeid Nahavandi and U. Rajendra Acharya}
 }
+
+@online{tailwind,
+  title   = {Tailwind},
+  url     = {https://tailwindcss.com/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{tanstack-query,
+  title   = {Tanstack Query},
+  url     = {https://tanstack.com/query/latest},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{axios,
+  title   = {Axios},
+  url     = {https://axios-http.com/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{motion,
+  title   = {Motion},
+  url     = {https://motion.dev/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{redux,
+  title   = {Redux},
+  url     = {https://redux.js.org/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{react-use-state,
+  title   = {React useState},
+  url     = {https://react.dev/reference/react/useState},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
