fix after review

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -79,16 +79,16 @@
     description={Sposób organizowania struktury katalogów w projekcie, w którym pliki są grupowane według rodzaju (typu) zasobu, a nie według funkcjonalności. Na przykład wszystkie komponenty trafiają do jednego folderu, wszystkie style do innego itd.}
 }
 
-\newglossaryentry{bibliote}
+\newglossaryentry{biblioteka}
 {
-    name={Bibliote},
+    name={Biblioteka},
     description={Zewnętrzny lub wewnętrzny zestaw gotowych funkcji, klas, komponentów lub modułów, który można wielokrotnie wykorzystywać w projekcie zamiast pisać wszystko od zera.}
 }
 
 \newglossaryentry{protected-route}
 {
     name={Protected route},
-    description={Trasa w aplikacji, do której dostęp jest ograniczony, zwykle tylko dla zalogowanych użytkowników lub użytkowników z odpowiednimi uprawnieniami. Jeżeli użytkownik nie spełnia warunków, jest przekierowywany.}
+    description={Trasa w aplikacji, do której dostęp jest ograniczony, zwykle tylko dla zalogowanych użytkowników lub użytkowników z odpowiednimi uprawnieniami. Jeżeli użytkownik nie spełnia warunków, jest przekierowywany (np. na stronę główną).}
 }
 
 \newglossaryentry{wzorzec}
