--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -79,9 +79,9 @@
     description={Sposób organizowania struktury katalogów w projekcie, w którym pliki są grupowane według rodzaju (typu) zasobu, a nie według funkcjonalności. Na przykład wszystkie komponenty trafiają do jednego folderu, wszystkie style do innego itd.}
 }
 
-\newglossaryentry{bibliote}
+\newglossaryentry{biblioteka}
 {
-    name={Bibliote},
+    name={Biblioteka},
     description={Zewnętrzny lub wewnętrzny zestaw gotowych funkcji, klas, komponentów lub modułów, który można wielokrotnie wykorzystywać w projekcie zamiast pisać wszystko od zera.}
 }
 
@@ -108,16 +108,16 @@
 }
 
 \newglossaryentry{hook}{
-    name={Hook},
-    description={}
+    name={Hook (React)},
+    description={Prosta funkcja w React, która „dodaje” możliwości do elementu interfejsu — np. pozwala mu coś zapamiętać (stan) albo zrobić coś po zmianie/załadowaniu. Większość hooków zaczyna się od \texttt{use...} (np. \texttt{useState}, \texttt{useEffect}).}
 }
 
 \newglossaryentry{css}{
     name={CSS},
-    description={}
+    description={Kaskadowe arkusze stylów (Cascading Style Sheets) — język opisu prezentacji dokumentów (np. HTML). Definiuje wygląd interfejsu: układ, kolory, typografię, odstępy, animacje i zachowania responsywne, oddzielając warstwę treści od warstwy prezentacji.}
 }
 
-\newglossaryentry{responsywn}{
-    name={Responsywn},
-    description={}
+\newglossaryentry{responsywnosc}{
+    name={Responsywność},
+    description={Określenie związane z projektowaniem responsywnym (Responsive Web Design, RWD), czyli dostosowywaniem interfejsu do różnych rozmiarów i parametrów ekranów. Obejmuje m.in. elastyczne siatki, grafiki i media queries, tak aby układ i czytelność były zachowane na telefonach, tabletach i desktopach.}
 }
