--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -83,15 +83,39 @@
     Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”}
 }
 
-%TODO
-%droniarz, dronairz fpv, dronairze foto/wideo, froanirz fotograf, Azure blob storage
+\newglossaryentry{operator-drona}
+{
+    name={Operator drona},
+    description={Osoba lub podmiot będący właścicielem i/lub zarządzającym statkami bezzałogowymi; odpowiada za organizację lotów, rejestry, utrzymanie floty oraz zgodność operacji z przepisami. Może posiadać jeden lub wiele dronów.}
+}
 
-%Operator drona – posiadacz floty (jeden lub więcej) dronów
-%
-%Pilot drona – osoba posiadająca uprawnienia do pilotowania drona
-%
-%Droniarz – pilot będący także operatorem drona (zazwyczaj entuzjasta dronów)
-%
-%Pilot FPV – pilot drona latajcy na goglach które dają widok z 1. osoby
-%
-%Pilot foto – pilot drona latający dronem fotograficznym
+\newglossaryentry{pilot-drona}
+{
+    name={Pilot drona},
+    description={Osoba posiadająca uprawnienia do pilotowania drona i wykonująca loty zgodnie z obowiązującymi przepisami oraz procedurami bezpieczeństwa.}
+}
+
+\newglossaryentry{droniarz}
+{
+    name={Droniarz},
+    description={Potoczne określenie pilota będącego jednocześnie operatorem drona; zwykle entuzjasta UAV, który łączy latanie, utrzymanie sprzętu i rozwój umiejętności.}
+}
+
+\newglossaryentry{pilot-fpv}
+{
+    name={Pilot FPV},
+    description={Pilot drona latający w trybie \textit{First Person View} (FPV), korzystający z gogli przekazujących obraz z kamery pokładowej, co pozwala sterować z perspektywy pierwszej osoby.}
+}
+
+\newglossaryentry{pilot-foto}
+{
+    name={Pilot foto},
+    description={Pilot drona wykorzystujący platformy fotograficzne/filmowe do rejestracji materiałów wizualnych (zdjęcia, wideo), zwykle z naciskiem na stabilizację i jakość obrazu.}
+}
+\newglossaryentry{droniarz-foto}{alias=pilot-foto}
+
+\newglossaryentry{azure-blob-storage}
+{
+    name={Azure Blob Storage},
+    description={Usługa magazynu obiektowego w chmurze Microsoft Azure do przechowywania nieustrukturyzowanych danych (\textit{blobs}) takich jak obrazy, wideo i pliki. Udostępnia kontenery, warstwy dostępu, wersjonowanie oraz tokeny SAS; często używana do hostowania multimediów w aplikacjach webowych.}
+}
