--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -5,6 +5,8 @@
 \usepackage[polish]{babel}
 \usepackage{import}
 \usepackage{csquotes}
+\usepackage{float}
+
 %JSON Coloring
 \lstdefinelanguage{json}{
     basicstyle=\footnotesize\ttfamily,
