--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -6,73 +6,97 @@
 \newglossaryentry{backend}
 {
     name={Backend},
-    description={Część aplikacji odpowiedzialna za logikę biznesową, przetwarzanie danych i komunikację z bazą danych. Działa po stronie serwera i obsługuje żądania wysyłane przez frontend.}
+    description={Część aplikacji odpowiedzialna za logikę biznesową, przetwarzanie danych i komunikację z bazą danych. Działa po stronie serwera i obsługuje żądania wysyłane przez frontend}
 }
 
 \newglossaryentry{frontend}
 {
     name={Frontend},
-    description={Warstwa aplikacji odpowiedzialna za interfejs użytkownika oraz interakcję z użytkownikiem. Zazwyczaj tworzona przy użyciu technologii takich jak HTML, CSS i JavaScript.}
+    description={Warstwa aplikacji odpowiedzialna za interfejs użytkownika oraz interakcję z użytkownikiem. Zazwyczaj tworzona przy użyciu technologii takich jak HTML, CSS i JavaScript}
 }
 
 \newglossaryentry{baza-danych}
 {
     name={Baza danych},
-    description={Zbiór uporządkowanych danych przechowywanych w sposób umożliwiający ich łatwe wyszukiwanie, modyfikowanie i analizowanie. W aplikacjach najczęściej wykorzystywane są relacyjne lub nierelacyjne bazy danych.}
+    description={Zbiór uporządkowanych danych przechowywanych w sposób umożliwiający ich łatwe wyszukiwanie, modyfikowanie i analizowanie. W aplikacjach najczęściej wykorzystywane są relacyjne lub nierelacyjne bazy danych}
 }
 
 \newglossaryentry{framework}
 {
     name={Framework},
-    description={Zestaw narzędzi, bibliotek i struktur wspomagających tworzenie aplikacji. Ułatwia programowanie poprzez dostarczenie gotowych komponentów oraz określenie zasad organizacji kodu.}
+    description={Zestaw narzędzi, bibliotek i struktur wspomagających tworzenie aplikacji. Ułatwia programowanie poprzez dostarczenie gotowych komponentów oraz określenie zasad organizacji kodu}
 }
 
 \newglossaryentry{review-kodu}
 {
     name={Review kodu},
-    description={Proces polegający na wzajemnym przeglądzie kodu źródłowego przez programistów w celu wykrycia błędów, poprawy jakości oraz zwiększenia spójności projektu.}
+    description={Proces polegający na wzajemnym przeglądzie kodu źródłowego przez programistów w celu wykrycia błędów, poprawy jakości oraz zwiększenia spójności projektu}
 }
 
 \newglossaryentry{jwt}
 {
     name={JWT},
-    description={Skrót od \textit{JSON Web Token}. Standard służący do bezpiecznego przekazywania informacji między stronami w formacie JSON, często używany w procesach autoryzacji użytkowników.}
+    description={Skrót od \textit{JSON Web Token}. Standard służący do bezpiecznego przekazywania informacji między stronami w formacie JSON, często używany w procesach autoryzacji użytkowników}
 }
 
 \newglossaryentry{cicd}
 {
     name={CI/CD},
-    description={Skrót od \textit{Continuous Integration/Continuous Deployment}. Praktyka programistyczna polegająca na automatyzacji procesu budowania, testowania i wdrażania oprogramowania.}
+    description={Skrót od \textit{Continuous Integration/Continuous Deployment}. Praktyka programistyczna polegająca na automatyzacji procesu budowania, testowania i wdrażania oprogramowania}
 }
 
 \newglossaryentry{commit}
 {
     name={Commit},
-    description={Zapis zmian w repozytorium systemu kontroli wersji, który dokumentuje stan projektu w określonym momencie.}
+    description={Zapis zmian w repozytorium systemu kontroli wersji, który dokumentuje stan projektu w określonym momencie}
 }
 
 \newglossaryentry{push}
 {
     name={Push},
-    description={Operacja w systemie kontroli wersji polegająca na wysłaniu lokalnych zmian (commitów) do zdalnego repozytorium.}
+    description={Operacja w systemie kontroli wersji polegająca na wysłaniu lokalnych zmian (commitów) do zdalnego repozytorium}
 }
 
 \newglossaryentry{spot}
 {
     name={Spot},
-    description={Spotkanie zespołu projektowego, zazwyczaj krótkie i regularne, służące omówieniu postępów prac, problemów oraz planów na najbliższy okres.}
+    description={Spotkanie zespołu projektowego, zazwyczaj krótkie i regularne, służące omówieniu postępów prac, problemów oraz planów na najbliższy okres}
 }
 
 \newglossaryentry{sidebar}
 {
     name={Sidebar},
-    description={Boczny panel w interfejsie użytkownika, zawierający menu nawigacyjne lub dodatkowe opcje funkcjonalne aplikacji.}
+    description={Boczny panel w interfejsie użytkownika, zawierający menu nawigacyjne lub dodatkowe opcje funkcjonalne aplikacji}
 }
 
 \newglossaryentry{design}
 {
     name={Design},
-    description={Etap lub proces projektowania wyglądu i funkcjonalności aplikacji, obejmujący zarówno aspekty wizualne, jak i użytkowe (UX/UI).}
+    description={Etap lub proces projektowania wyglądu i funkcjonalności aplikacji, obejmujący zarówno aspekty wizualne, jak i użytkowe (UX/UI)}
+}
+
+\newglossaryentry{folder-by-type}
+{
+    name={Folder by type},
+    description={Sposób organizowania struktury katalogów w projekcie, w którym pliki są grupowane według rodzaju (typu) zasobu, a nie według funkcjonalności. Na przykład wszystkie komponenty trafiają do jednego folderu, wszystkie style do innego itd}
+}
+
+\newglossaryentry{biblioteka}
+{
+    name={Biblioteka},
+    description={Zewnętrzny lub wewnętrzny zestaw gotowych funkcji, klas, komponentów lub modułów, który można wielokrotnie wykorzystywać w projekcie zamiast pisać wszystko od zera}
+}
+
+\newglossaryentry{protected-route}
+{
+    name={Protected route},
+    description={Trasa w aplikacji, do której dostęp jest ograniczony, zwykle tylko dla zalogowanych użytkowników lub użytkowników z odpowiednimi uprawnieniami. Jeżeli użytkownik nie spełnia warunków, jest przekierowywany (np. na stronę główną)}
+}
+
+\newglossaryentry{wzorzec}
+{
+    name={Wzorzec},
+    description={Powtarzalne, sprawdzone rozwiązanie typowego problemu projektowego lub architektonicznego. Wzorzec opisuje \emph{jak} coś organizować lub implementować, żeby było czytelne, skalowalne i łatwe w utrzymaniu}
 }
 
 \newglossaryentry{DAD_LLC}{
